--- a/index.html
+++ b/index.html
@@ -100,43 +100,22 @@
             </table>
 
 
-
-
-
-
-        <!-- <div class="race">
-            <ul>
-                <li >race 1</li>
-                <li>race 2</li>
-                <li>race 3</li>
-                <li>race 4</li>
-                <li>race 5</li>
-                <li>race 6</li>
-                <li>race 7</li>
-            </ul>
-
-            <ul>
-                <li><span class="service-race">1</span> service(s)</li>
-                <li><span class="service-race">1</span> service(s)</li>
-                <li><span class="service-race">1</span> service(s)</li>
-                <li><span class="service-race">1</span> service(s)</li>
-                <li><span class="service-race">1</span> service(s)</li>
-                <li><span class="service-race">1</span> service(s)</li>
-                <li><span class="service-race">1</span> service(s)</li>
-            
-            </ul>
-       </div> -->
-
         </section>
 
+
+        <section class="image-dog">
+            <h2 class="race">nom de la race</h2>
+            <div class="image">
+                <img class="img-race" src="" alt="">
+            </div>
+        </section>
+
+
+
     </main>
-
-
-
-
 
     
 </body>
 
-<!-- <script src="index.js"></script> -->
+<script src="index.js"></script>
 </html>
