--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>race</title>
 </head>
 <body>
 
@@ -16,8 +16,8 @@
 
         <ul>
             <li><a href="">acceuil</a></li>
-            <li><a href="">annecdote</a></li>
-            <li><a href="">races</a></li>
+            <li><a href="annecdote.html">annecdote</a></li>
+            <li><a href="index.html">races</a></li>
         </ul>
     </header>
 
