--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <h2 class="logo">Casting</h2>
 
         <ul>
-            <li><a href="">acceuil</a></li>
-            <li><a href="">annecdote</a></li>
-            <li><a href="">races</a></li>
+            <li><a href="">Accueil</a></li>
+            <li><a href="">Annecdote</a></li>
+            <li><a href="">Races</a></li>
         </ul>
     </header>
 
