--- a/annecdote.html
+++ b/annecdote.html
@@ -16,7 +16,7 @@
     <h2 class="logo">Casting</h2>
 
     <ul>
-        <li><a href="">acceuil</a></li>
+        <li><a href="./index.html">acceuil</a></li>
         <li><a href="annecdote.html">annecdote</a></li>
         <li><a href="index.html">races</a></li>
     </ul>
