--- a/index.html
+++ b/index.html
@@ -49,12 +49,19 @@
 
         </section>
 
+        <section class="">
+            <div class="image-dog">
+                <h2 class="h2"> </h2>
+                <p class="coat"></p>
+                <p class="country"></p>
+                <p class="origin"></p>
+                <p class="pattern"></p>
 
-        <section class="image-dog">
-            <h2 class="race">nom de la race</h2>
+            </div>
+            <!-- <h2 class="race">nom de la race</h2>
             <div class="image">
                 <img class="img-race" src="" alt="">
-            </div>
+            </div> -->
         </section>
 
 
