--- a/annecdote.html
+++ b/annecdote.html
@@ -7,10 +7,9 @@
     <title>annectdote</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="light">
     
-</body>
-</html>
+
 
 <header>
     <h2 class="logo">Casting</h2>
@@ -20,7 +19,7 @@
         <li><a href="annecdote.html">annecdote</a></li>
         <li><a href="index.html">races</a></li>
     </ul>
-    <button  class="dark-mode">DarkMode</button>
+    <button  class="dark-toggle">DarkMode</button>
 
 </header>
 
@@ -34,3 +33,9 @@
         Cupiditate odio aliquam aut quasi totam architecto optio vero. Aut consequatur molestiae iusto vero, qui ipsum, quia sed, enim ut atque modi nobis harum ipsa ducimus suscipit saepe tempore blanditiis.</p>
     </section>
 </main>
+
+
+<script src="dark.js"></script>
+</body>
+
+</html>
