--- a/annecdote.html
+++ b/annecdote.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>annectdote</title>
     <link rel="stylesheet" href="style.css">
+    <script  defer src="./ac.js"></script>
 </head>
 <body class="light">
     
