--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <title>race</title>
 </head>
 
-<<<<<<< HEAD
 
 <body class="light">
     <!-- Header -->
@@ -22,19 +21,6 @@
     </ul>
     <button  class="dark-toggle">DarkMode</button>
 </header>
-=======
-<body>
-  <!-- Header -->
-  <header>
-    <h2 class="logo">Casting</h2>
-    <ul>
-      <li><a href="acceuil.html" .html">acceuil</a></li>
-      <li><a href="annecdote.html">annecdote</a></li>
-      <li><a href="index.html">races</a></li>
-    </ul>
-    <button class="dark-mode">DarkMode</button>
-  </header>
->>>>>>> 9840259b2fa84cc667bdcd4d7337395947628fac
   <main>
     <section class="information">
       <p class="orangep">Races :<span id="span"></span></p>
@@ -58,7 +44,7 @@
     </section>
     <section class="img">
       <div class="image-dog">
-        <h2 class="h2"> </h2>
+        <h2 class="h2"></h2>
         <p class="coat"></p>
         <p class="country"></p>
         <p class="origin"></p>
@@ -70,6 +56,6 @@
 
 <script src="dark.js"></script>
 
-<script src="index.js"></script>
+<script src="index2.js"></script>
 
 </html>
