--- a/annecdote.html
+++ b/annecdote.html
@@ -25,6 +25,8 @@
 </header>
 
  <button class="btn-annecdote">nouvelle annecdote</button>
+ <button class="facts-column">new facts column</button>
+ <button class="fullAc">Toute les annecdote</button>
 <main id="annecdot">
     <section class="annecdote">
         <h2 class="annecdote-title">Annecdote</h2>
@@ -32,6 +34,9 @@
 
         <p class="text-annecdote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, officiis laboriosam. Dolor veritatis eius, vel quas molestiae ea quod ut fuga aliquam consequuntur quis nostrum fugit autem unde minus! Corrupti.
         Cupiditate odio aliquam aut quasi totam architecto optio vero. Aut consequatur molestiae iusto vero, qui ipsum, quia sed, enim ut atque modi nobis harum ipsa ducimus suscipit saepe tempore blanditiis.</p>
+    </section>
+
+    <section class="setAc">
     </section>
 </main>
 
